--- a/ProyectoAP_Final/BackEnd/src/main/resources/application.properties
+++ b/ProyectoAP_Final/BackEnd/src/main/resources/application.properties
@@ -1,8 +1,13 @@
+#Prueba Locales - Testing
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendalef?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
+#Produccion - Clever Cloud
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendalef?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://ujedqkhpsy7prygc:h6nMmCq4XLGTnGdip1hj@bzvsfvowy2fqfrbrxbum-mysql.services.clever-cloud.com:3306/bzvsfvowy2fqfrbrxbum
+spring.datasource.username=ujedqkhpsy7prygc
+spring.datasource.password=h6nMmCq4XLGTnGdip1hj
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
