--- a/ProyectoAP_Final/BackEnd/src/main/resources/application.properties
+++ b/ProyectoAP_Final/BackEnd/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql://ujedqkhpsy7prygc:h6nMmCq4XLGTnGdip1hj@bzvsfvo
 spring.datasource.username=ujedqkhpsy7prygc
 spring.datasource.password=h6nMmCq4XLGTnGdip1hj
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 #JWT
 jwt.secret = secret
 jwt.expiration = 6600
